2005-01-19 Raphael Neider <rneider AT web.de>

	* src/SDCCglobl.h: ensure that PATH_MAX >= 2048 to guarantee
	  cmdLine buffers (used when calling sdcpp...) are large enough
	  (MAX_PATH=256 truncates arguments leading to system halts when
	  used in MinGW...)
	* src/pic16/gen.c (pic16_sameRegs): relaxed size criterion
	* (genUminus): rewritten to for efficiency
	* (genNearPointer[GS]et): enforce reloading of FSR0 (was still
	  used uninitialized in some cases)
	* (genCast): upcasting a 16bit int to a 24bit GPOINTER may not
	  copy the third byte from the int -- now assumes 0x80 (data memory)
	* src/pic16/genarith.c (pic16_genPlus): fixed bug when swapping
	  operands (genAddLit expects the iCode's operands to swapped as
	  well), fixed leftover bytes (crashed for short left operands)
	* (pic16_genMinusDec): performance improvements, removed false
	  PIC14 emitSKPNCs
	* (pic16_genMinus): fixed to cope with differently sized operands
	* src/pic16/glue.c (pic16_glue): added new banksel optimization
	  for --obanksel > 1
	* src/pic16/pcode.c: implemented (first phase of) banksel optimization
	* src/pic16/graph.[ch]: implementation of directed graphs, used by
	  new banksel optimization
	* src/pic16/pcoderegs.c (pCodeRegMapLiveRangesInFlow): prevented
	  analysis for temporary registers (segfaults...)
	* src/pic16/peeph.def: added rule

2005-01-18 Vangelis Rokas <vrokas AT otenet.gr>

	* device/lib/pic16/libc/stdlib/x_ftoa.c: it defines x_ftoa function
	which converts a float number to its ASCII representation
	* device/lib/pic16/libc/utils/cnvfrac.S,cnvint.S: support
	functions to convert the fractional and integer part of a float to ASCII,
	* device/lib/pic16/libc/stdlib/(calloc.c,free.c, malloc.c,
	realloc.c): added _MALLOC_SPEC to explicit place variables in data
	ram
	* device/include/asm/pic16/features.h: added _CODE, _DATA, _AUTOMEM,
	_STATMEM macros,
	* device/include/pic16/adc.h: added GPL info,